--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,9 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
 
+    //org json
+    implementation 'org.json:json:20200518'
+
     //WebFlux
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-webflux'
     implementation 'io.projectreactor:reactor-core:3.5.3'
