--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: ${dbUrl}
+    url: ${dbURL}
     username: admin
     password: ${dbPassword}
   jpa:
@@ -22,16 +22,15 @@ spring:
       client:
         registration:
           google:
-            client-id: ${google_oatuh2_id}
-            client-secret: ${google_oauth2_secret}
+            client-id: ${google_client_id}
+            client-secret: ${google_client_secret}
             redirect-uri: http://localhost:8080/login/oauth2/code/google
             scope:
               - email
               - profile
   data:
     redis:
-      #      host: localhost
-      host: 13.209.87.43
+      host: ${redisHost}
       port: 6379
       # 로컬에서는 비밀번호 필요 없음
       password: ${redisPassword}
@@ -56,7 +55,7 @@ cloud:
   aws:
     credentials:
       access-key: ${awsAccessKey}
-      secret-key: ${awsSecretKey}
+      secret-key: {awsSecretKey}
     s3: #버킷이름
       bucket: pmm-s3-1
     region: #S3 지역
