--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -24,7 +24,7 @@ spring:
           google:
             client-id: ${google_client_id}
             client-secret: ${google_client_secret}
-            redirect-uri: http://localhost:8080/login/oauth2/code/google
+            redirect-uri: ${google_redirect_uri}
             scope:
               - email
               - profile
@@ -55,7 +55,7 @@ cloud:
   aws:
     credentials:
       access-key: ${awsAccessKey}
-      secret-key: {awsSecretKey}
+      secret-key: ${awsSecretKey}
     s3: #버킷이름
       bucket: pmm-s3-1
     region: #S3 지역
