배포용 파일

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -53,7 +53,7 @@ cloud:
   aws:
     credentials:
       access-key: ${AWS_ACCESS_KEY_ID}
-      secret-key: ${AWS_SECRET_KEY}
+      secret-key: ${AWS_SECRET_ACCESS_KEY}
     s3:
       bucket: pmm-s3-1
     region:
