--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,8 +43,8 @@ jobs:
           springdoc.swagger-ui.path: /api-docs.html
           jwt.accessKey: ${{ secrets.JWT_ACCESS_KEY }}
           jwt.refreshKey: ${{ secrets.JWT_REFRESH_KEY }}
-          cloud.aws.credentials.access-key: ${{ secrets.AWS_ACCESS_KEY }}
-          cloud.aws.credentials.secret-key: ${{ secrets.AWS_SECRET_KEY }}  
+          cloud.aws.credentials.access-key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          cloud.aws.credentials.secret-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}  
           
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
