--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
     "react-spinners": "^0.13.8",
     "web-vitals": "^2.1.4"
   },
-  "proxy": "http://192.168.0.206:8080",
+  "proxy": "http://backend:8080",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
