--- a/backend/src/main/resources/application-container.yml
+++ b/backend/src/main/resources/application-container.yml
@@ -1,15 +1,12 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://db/lolstagram?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul
-    username: root
-    password: ${DB_PASSWORD}
-<<<<<<< HEAD
+    url: jdbc:mysql://${MYSQL_HOST}/${MYSQL_DATABASE}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul
+    username: ${MYSQL_USERNAME}
+    password: ${MYSQL_PASSWORD}
   retry:
     max-attempts: 5         # 최대 재시도 횟수
     max-delay: 5000         # 재시도 간 최대 대기 시간 (5초)
-=======
->>>>>>> master
   jpa:
     hibernate:
       ddl-auto: update
@@ -36,8 +33,8 @@ spring:
               - profile
   data:
     redis:
-      host : redis
-      port : 6379
+      host : ${REDIS_HOST}
+      port : ${REDIS_PORT}
   web:
     resources:
       static-locations: classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/
