--- a/.github/workflows/docker-backend.yml
+++ b/.github/workflows/docker-backend.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${DOCKER_USERNAME}
+          password: ${DOCKER_PASSWORD}
 
       # 4. Docker 이미지 빌드 및 푸시
       - name: Build and Push Docker Image
