--- a/.github/workflows/docker-backend.yml
+++ b/.github/workflows/docker-backend.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${DOCKER_USERNAME}
-          password: ${DOCKER_PASSWORD}
+          username: ${{DOCKER_USERNAME}}
+          password: ${{DOCKER_PASSWORD}}
 
       # 4. Docker 이미지 빌드 및 푸시
       - name: Build and Push Docker Image
@@ -38,9 +38,9 @@ jobs:
       - name: Deploy to Server
         uses: appleboy/ssh-action@v0.1.8
         with:
-          host: ${AWS_EC2_HOST}
-          username: ${AWS_EC2_USRNAME}
-          key: ${AWS_EC2_KEY}
+          host: ${{AWS_EC2_HOST}}
+          username: ${{AWS_EC2_USRNAME}}
+          key: ${{AWS_EC2_KEY}}
           script: |
             docker pull junghoonkim/backend:latest
             docker stop backend || true
