--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -3,7 +3,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://db/lolstagram?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul
     username: root
-    password: ${DB_PASSWORD}
+    password: ${MYSQL_PASSWORD}
   jpa:
     hibernate:
       ddl-auto: update
@@ -32,6 +32,7 @@ spring:
     redis:
       host: redis
       port: 6379
+
   web:
     resources:
       static-locations: classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/
@@ -60,5 +61,5 @@ cloud:
       auto: false
 
 origin:
-  client: "http://${AWS_URL}:3000"
-  server: "http://${AWS_URL}:8080"
+  client: "http://ec2-3-39-119-168.ap-northeast-2.compute.amazonaws.com:3000"
+  server: "http://ec2-3-39-119-168.ap-northeast-2.compute.amazonaws.com:8080"
