--- a/.github/workflows/docker-backend.yml
+++ b/.github/workflows/docker-backend.yml
@@ -43,5 +43,5 @@ jobs:
           key: ${{secrets.AWS_EC2_KEY}}
           script: |
             docker-compose pull backend
-            # backend 컨테이너만 중단 및 재시작
+            docker-compose down backend || true  # backend 컨테이너 중지 및 삭제
             docker-compose up -d backend
