--- a/.github/workflows/docker-frontend.yml
+++ b/.github/workflows/docker-frontend.yml
@@ -43,6 +43,6 @@ jobs:
           username: ${{ secrets.AWS_EC2_USERNAME }}
           key: ${{ secrets.AWS_EC2_KEY }}
           script: |
-            docker-compose pull frontend
-            docker-compose down frontend || true  # frontend 컨테이너 중지 및 삭제
-            docker-compose up -d frontend
+            docker compose pull frontend
+            docker compose down frontend || true  # frontend 컨테이너 중지 및 삭제
+            docker compose up -d frontend
