--- a/.github/workflows/docker-frontend.yml
+++ b/.github/workflows/docker-frontend.yml
@@ -2,43 +2,54 @@ name: Docker Image CI
 
 on:
   push:
+    branches:
+      - frontend # frontend 브랜치에서의 push를 감지
     paths:
       - 'frontend/**'
   pull_request:
-    paths:
-      - 'frontend/**'
-
+    types:
+      - closed # PR이 닫힐 때 (병합 포함)
+    branches:
+      - master # 대상 브랜치가 master일 때
 
 jobs:
   run-on-merge:
     runs-on: ubuntu-latest
+
     if: github.event.pull_request.merged == true &&
         github.event.pull_request.base.ref == 'master' &&
         github.event.pull_request.head.ref == 'frontend'
 
     steps:
-      # 1. 코드 체크아웃
+      # 1. 디버깅: 병합 이벤트 정보 출력
+      - name: Debug Event Info
+        run: |
+          echo "Base Branch: ${{ github.event.pull_request.base.ref }}"
+          echo "Head Branch: ${{ github.event.pull_request.head.ref }}"
+          echo "Merged: ${{ github.event.pull_request.merged }}"
+
+      # 2. 코드 체크아웃
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # 2. Docker Buildx 설정
+      # 3. Docker Buildx 설정
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      # 3. Docker 로그인 (Docker Hub 또는 Private Registry)
+      # 4. Docker 로그인 (Docker Hub)
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # 4. Docker 이미지 빌드 및 푸시
+      # 5. Docker 이미지 빌드 및 푸시
       - name: Build and Push Docker Image
         run: |
           docker build -t junghoonkim/frontend:latest ./frontend
           docker push junghoonkim/frontend:latest
 
-      # 5. 배포 서버에 SSH로 접속하여 최신 Docker 이미지 배포
+      # 6. 배포 서버에 SSH로 접속하여 최신 Docker 이미지 배포
       - name: Deploy to Server
         uses: appleboy/ssh-action@v0.1.8
         with:
@@ -47,5 +58,5 @@ jobs:
           key: ${{ secrets.AWS_EC2_KEY }}
           script: |
             docker compose pull frontend
-            docker compose down frontend || true  # frontend 컨테이너 중지 및 삭제
+            docker compose down frontend || true
             docker compose up -d frontend
