dockerfile 수정, 변수 매핑

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,6 +1,15 @@
 # 빌드이미지로node:14지정
 FROM node:14 AS build
 WORKDIR /app
+
+# 빌드 시 전달받을 환경 변수 정의
+ARG REACT_APP_API_BASE_URL
+ARG REACT_APP_OAUTH2_REDIRECT_URI
+
+# React 빌드 환경 변수 설정
+ENV REACT_APP_API_BASE_URL=$REACT_APP_API_BASE_URL
+ENV REACT_APP_OAUTH2_REDIRECT_URI=$REACT_APP_OAUTH2_REDIRECT_URI
+
 # 빌드컨텍스트의소스코드를작업디렉토리로복사, 라이브러리설치및빌드
 COPY package*.json /app/
 RUN npm install
