--- a/.github/workflows/docker-backend.yml
+++ b/.github/workflows/docker-backend.yml
@@ -2,16 +2,23 @@ name: Docker CI/CD Pipeline
 
 on:
   push:
+    branches:
+      - backend # frontend 브랜치에서의 push를 감지
     paths:
       - 'backend/**'
   pull_request:
-    paths:
-      - 'backend/**'
+    types:
+      - closed # PR이 닫힐 때 (병합 포함)
+    branches:
+      - master # 대상 브랜치가 master일 때
 
 jobs:
-  build-and-deploy:
+  run-on-merge:
     runs-on: ubuntu-latest
-    if: github.event.pull_request.merged == true
+
+    if: github.event.pull_request.merged == true &&
+        github.event.pull_request.base.ref == 'master' &&
+        github.event.pull_request.head.ref == 'backend'
 
     steps:
       # 1. 코드 체크아웃
