--- a/.github/workflows/docker-frontend.yml
+++ b/.github/workflows/docker-frontend.yml
@@ -47,7 +47,10 @@ jobs:
       # 5. Docker 이미지 빌드 및 푸시
       - name: Build and Push Docker Image
         run: |
-          docker build -t junghoonkim/frontend:latest ./frontend
+          docker build \
+            --build-arg REACT_APP_API_BASE_URL=${{ secrets.REACT_APP_API_BASE_URL }} \
+            --build-arg REACT_APP_OAUTH2_REDIRECT_URI=${{ secrets.REACT_APP_OAUTH2_REDIRECT_URI }} \
+            -t junghoonkim/frontend:latest ./frontend
           docker push junghoonkim/frontend:latest
 
       # 6. 배포 서버에 SSH로 접속하여 최신 Docker 이미지 배포
