--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,12 @@ services:
   
       
   frontend:
+    build:
+      context: .
+      dockerfile: Dockerfile
+      args:
+        REACT_APP_API_BASE_URL: ${REACT_APP_API_BASE_URL}
+        REACT_APP_OAUTH2_REDIRECT_URI: ${REACT_APP_OAUTH2_REDIRECT_URI}
     image: junghoonkim/frontend:latest
     container_name: frontend
     ports:
@@ -22,6 +28,7 @@ services:
     environment:
       - BACKEND_HOST=backend
       - BACKEND_PORT=8080
+    
     networks:
       - lolstagram
 
