--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -9,11 +9,11 @@ server {
 
     # 이름 지정 위치 @backend: 정적 파일이 없으면 백엔드로 프록시
     location @backend {
-        proxy_pass http://backend:8080;
+        proxy_pass http://localhost:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header Origin http://frontend:3000;  # Origin 헤더 설정
+        proxy_set_header Origin http://localhost:3000;  # Origin 헤더 설정
     }
 }
