--- a/.github/workflows/docker-backend.yml
+++ b/.github/workflows/docker-backend.yml
@@ -11,14 +11,14 @@ on:
       - closed # PR이 닫힐 때 (병합 포함)
     branches:
       - master # 대상 브랜치가 master일 때
+    paths:
+      - 'backend/**'
 
 jobs:
   run-on-merge:
     runs-on: ubuntu-latest
 
-    if: github.event.pull_request.merged == true &&
-        github.event.pull_request.base.ref == 'master' &&
-        github.event.pull_request.head.ref == 'backend'
+    if: github.event.pull_request.merged == true && github.event_name == 'push'
 
     steps:
       # 1. 코드 체크아웃
