--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -54,7 +54,7 @@ cloud:
       access-key: ${AWS_ACCESS_KEY_ID}
       secret-key: ${AWS_SECRET_ACCESS_KEY}
     s3:
-      bucket: pmm-s3-1
+      bucket: ddoons-bucket
     region:
       static: ap-northeast-2
     stack:
