--- a/.github/workflows/docker-frontend.yml
+++ b/.github/workflows/docker-frontend.yml
@@ -47,10 +47,7 @@ jobs:
       # 5. Docker 이미지 빌드 및 푸시
       - name: Build and Push Docker Image
         run: |
-          docker build --no-cache \
-            # --build-arg REACT_APP_API_BASE_URL=${{ secrets.REACT_APP_API_BASE_URL }} \
-            # --build-arg REACT_APP_OAUTH2_REDIRECT_URI=${{ secrets.REACT_APP_OAUTH2_REDIRECT_URI }} \
-            -t junghoonkim/frontend:latest ./frontend
+          docker build --no-cache -t junghoonkim/frontend:latest ./frontend
           docker push junghoonkim/frontend:latest
 
 
