무중단 배포 테스트트

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,5 +1,5 @@
 upstream spring_app {
-    server backend:8080;  # Blue 환경
+    server backend_blue:8080;  # Blue 환경
     # server backend_green:8081;  # Green 환경 (필요 시 주석 해제)
 }
 
