--- a/.github/workflows/docker-backend.yml
+++ b/.github/workflows/docker-backend.yml
@@ -86,10 +86,10 @@ jobs:
             docker compose up -d backend_${NEW_ENV}
 
             # Nginx 설정 파일 업데이트 (이전 서버에서 새로운 서버로 전환)
-            sed -i "s/server backend_${ACTIVE_ENV}:808[0-1];/server backend_${NEW_ENV}:${NEW_PORT};/" nginx.conf
+            docker exec frontend sh -c sed -i 's|^\(\s*server backend_${ACTIVE_ENV}:\)|#\1|' /etc/nginx/conf.d/default.conf && sed -i 's|^#\(\s*server backend_${NEW_ENV}:\)|\1|' /etc/nginx/conf.d/default.conf
 
             # Nginx 리로드
-            docker compose exec nginx nginx -s reload
+            docker exec frontend nginx -t && docker exec frontend nginx -s reload
 
             # 활성 환경 업데이트
             echo $NEW_ENV > /home/ubuntu/active.txt
