--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,8 +1,3 @@
-upstream spring_app {
-    server backend_blue:8080;  # Blue 환경
-    # server backend_green:8081;  # Green 환경 (필요 시 주석 해제)
-}
-
 server {
     listen 80;
 
@@ -14,7 +9,7 @@ server {
 
     # 이름 지정 위치 @backend: 정적 파일이 없으면 백엔드로 프록시
     location @backend {
-        proxy_pass http://spring_app;
+        proxy_pass http://ec2-3-39-119-168.ap-northeast-2.compute.amazonaws.com:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
