--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -30,7 +30,8 @@ COPY --from=build /app/build /app
 EXPOSE 3000
 
 # serve를 사용하여 정적 파일 제공
-CMD ["serve", "-s", ".", "-l", "3000"]
+CMD ["serve", "-s", ".", "-l", "3000", "-H", "0.0.0.0"]
+
 
 
 # 런타임이미지로nginx 1.21.4지정, /usr/share/nginx/html 폴더에권한추가
