--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,4 +1,4 @@
-include /etc/nginx/conf.d/service-url.inc;
+include /home/ubuntu/service-url.inc;
 server {
     listen 80;
     
@@ -10,7 +10,7 @@ server {
 
     # 이름 지정 위치 @backend: 정적 파일이 없으면 백엔드로 프록시
     location @backend {
-        proxy_pass http://ec2-3-39-119-168.ap-northeast-2.compute.amazonaws.com:8080;
+        proxy_pass $service_url;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
