--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -14,6 +14,14 @@ spring:
     database: mysql
     defer-datasource-initialization: true
     database-platform: org.hibernate.dialect.MySQL8Dialect
+    hikari:
+      maximum-pool-size: 10     # 최대 커넥션 풀
+      minimum-idle: 5               # 최소 풀
+      idle-timeout: 600000         # 10분 후 유휴 커넥션 제거
+      max-lifetime: 14400000               # 4시간마다 커넥션 갱신
+      keepalive-time: 300000       # 유휴 상태인 커넥션이면 5분마다 keepalive
+      connection-test-query: SELECT 1
+      connection-timeout: 30000    # 30초 이내 연결 실패 시 예외
   sql:
     init:
       mode: always
